@@ -41,6 +41,7 @@
 	* Added a parameter for ATagParams to the link viewhelper, credits Andre Westbunk
 	* Added a TypoScript option to control loading of Javascript files
 	* Added a TypoScript option to set a fixed direction for sorting options
+	* Added marker ###FACETING.active### to detect if any facet option has been selected
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
